@@ -2,23 +2,22 @@
 package org.jetbrains.plugins.cucumber.psi.impl;
 
 import com.intellij.lang.ASTNode;
+import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.psi.tree.TokenSet;
 import com.intellij.psi.util.CachedValueProvider;
 import com.intellij.psi.util.CachedValuesManager;
 import com.intellij.psi.util.PsiModificationTracker;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.plugins.cucumber.CucumberUtil;
 import org.jetbrains.plugins.cucumber.psi.*;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 public class GherkinScenarioOutlineImpl extends GherkinStepsHolderBase implements GherkinScenarioOutline {
   private static final TokenSet EXAMPLES_BLOCK_FILTER = TokenSet.create(GherkinElementTypes.EXAMPLES_BLOCK);
 
-  public GherkinScenarioOutlineImpl(final @NotNull ASTNode node) {
+  public GherkinScenarioOutlineImpl(@NotNull ASTNode node) {
     super(node);
   }
 
@@ -42,7 +41,7 @@ public class GherkinScenarioOutlineImpl extends GherkinStepsHolderBase implement
     List<GherkinExamplesBlock> result = new ArrayList<>();
     final ASTNode[] nodes = getNode().getChildren(EXAMPLES_BLOCK_FILTER);
     for (ASTNode node : nodes) {
-      result.add((GherkinExamplesBlock) node.getPsi());
+      result.add((GherkinExamplesBlock)node.getPsi());
     }
     return result;
   }
@@ -52,7 +51,17 @@ public class GherkinScenarioOutlineImpl extends GherkinStepsHolderBase implement
     return CachedValuesManager
       .getCachedValue(this, () -> CachedValueProvider.Result.create(buildOutlineTableMap(this), PsiModificationTracker.MODIFICATION_COUNT));
   }
-  
+
+  @Override
+  public List<String> getParamsSubstitutions() {
+    final String text = getScenarioName();
+    if (StringUtil.isEmpty(text)) return Collections.emptyList();
+
+    final List<String> substitutions = new ArrayList<>();
+    CucumberUtil.addSubstitutionFromText(text, substitutions);
+    return substitutions;
+  }
+
   private static @Nullable Map<String, String> buildOutlineTableMap(@Nullable GherkinScenarioOutline scenarioOutline) {
     if (scenarioOutline == null) {
       return null;
@@ -64,7 +73,7 @@ public class GherkinScenarioOutlineImpl extends GherkinStepsHolderBase implement
         continue;
       }
       List<GherkinTableCell> headerCells = table.getHeaderRow().getPsiCells();
-      List<GherkinTableCell> dataCells = table.getDataRows().get(0).getPsiCells();
+      List<GherkinTableCell> dataCells = table.getDataRows().getFirst().getPsiCells();
 
       Map<String, String> result = new HashMap<>();
       for (int i = 0; i < headerCells.size(); i++) {
