@@ -1,4 +1,4 @@
-// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.prettierjs;
 
 import com.google.gson.Gson;
@@ -8,29 +8,23 @@ import com.google.gson.stream.JsonToken;
 import com.intellij.codeInsight.hint.HintManager;
 import com.intellij.codeInsight.hint.HintManagerImpl;
 import com.intellij.codeInsight.hint.HintUtil;
-import com.intellij.execution.ExecutionException;
-import com.intellij.execution.process.ProcessOutput;
+import com.intellij.idea.AppMode;
 import com.intellij.javascript.nodejs.PackageJsonData;
-import com.intellij.javascript.nodejs.interpreter.NodeInterpreterUtil;
-import com.intellij.javascript.nodejs.interpreter.NodeJsInterpreter;
-import com.intellij.javascript.nodejs.interpreter.NodeJsInterpreterRef;
-import com.intellij.javascript.nodejs.npm.InstallNodeLocalDependenciesAction;
-import com.intellij.javascript.nodejs.npm.NpmManager;
-import com.intellij.javascript.nodejs.settings.NodeSettingsConfigurable;
-import com.intellij.javascript.nodejs.util.NodePackage;
+import com.intellij.javascript.nodejs.execution.NodeTargetRun;
 import com.intellij.json.psi.JsonFile;
+import com.intellij.lang.javascript.buildTools.npm.PackageJsonCommonUtil;
 import com.intellij.lang.javascript.buildTools.npm.PackageJsonUtil;
-import com.intellij.lang.javascript.linter.*;
+import com.intellij.lang.javascript.linter.JSLinterConfigFileUtil;
+import com.intellij.lang.javascript.linter.JSLinterConfigLangSubstitutor;
+import com.intellij.lang.javascript.psi.util.JSPluginPathManager;
 import com.intellij.lang.javascript.psi.util.JSProjectUtil;
-import com.intellij.notification.Notification;
-import com.intellij.notification.NotificationListener;
-import com.intellij.notification.NotificationType;
+import com.intellij.lang.javascript.service.JSLanguageServiceUtil;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ModalityState;
 import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.editor.Editor;
-import com.intellij.openapi.options.ShowSettingsUtil;
+import com.intellij.openapi.project.BaseProjectDirectories;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.Ref;
 import com.intellij.openapi.util.text.StringUtil;
@@ -41,12 +35,12 @@ import com.intellij.psi.PsiFile;
 import com.intellij.psi.PsiManager;
 import com.intellij.psi.util.CachedValueProvider;
 import com.intellij.psi.util.CachedValuesManager;
-import com.intellij.ui.HyperlinkAdapter;
 import com.intellij.ui.LightweightHint;
 import com.intellij.util.ArrayUtil;
 import com.intellij.util.ObjectUtils;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.text.SemVer;
+import icons.JavaScriptLanguageIcons;
 import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
@@ -54,17 +48,17 @@ import org.jetbrains.annotations.Nullable;
 import org.yaml.snakeyaml.Yaml;
 
 import javax.swing.*;
-import javax.swing.event.HyperlinkEvent;
 import javax.swing.event.HyperlinkListener;
 import java.io.IOException;
 import java.io.StringReader;
+import java.nio.file.Path;
 import java.util.*;
+import java.util.concurrent.TimeUnit;
 
-import static com.intellij.lang.javascript.buildTools.npm.PackageJsonUtil.findChildPackageJsonFile;
 import static com.intellij.prettierjs.PrettierConfig.createFromMap;
 
 public final class PrettierUtil {
-  public static final Icon ICON = null;
+  public static final Icon ICON = JavaScriptLanguageIcons.FileTypes.Prettier;
   public static final String PACKAGE_NAME = "prettier";
   public static final String CONFIG_SECTION_NAME = PACKAGE_NAME;
   public static final String RC_FILE_NAME = ".prettierrc";
@@ -81,7 +75,8 @@ public final class PrettierUtil {
     RC_FILE_NAME + ".yaml", RC_FILE_NAME + ".json5",
     RC_FILE_NAME + ".js", CONFIG_FILE_NAME + ".js",
     RC_FILE_NAME + ".mjs", CONFIG_FILE_NAME + ".mjs",
-    RC_FILE_NAME + ".cjs", CONFIG_FILE_NAME + ".cjs",
+    RC_FILE_NAME + ".cjs", CONFIG_FILE_NAME + ".cjs", RC_FILE_NAME + ".ts", CONFIG_FILE_NAME + ".ts", RC_FILE_NAME + ".mts",
+    CONFIG_FILE_NAME + ".mts", RC_FILE_NAME + ".cts", CONFIG_FILE_NAME + ".cts",
     RC_FILE_NAME + ".toml"
   );
 
@@ -89,6 +84,8 @@ public final class PrettierUtil {
     ContainerUtil.append(CONFIG_FILE_NAMES, PackageJsonUtil.FILE_NAME);
 
   public static final SemVer MIN_VERSION = new SemVer("1.13.0", 1, 13, 0);
+  public static final SemVer NODE_MIN_VERSION_FOR_STRIP_TYPES_FLAG = new SemVer("22.6.0", 22, 6, 0);
+  public static final SemVer NODE_MAX_VERSION_FOR_STRIP_TYPES_FLAG = new SemVer("23.6.0", 23, 6, 0);
   private static final Logger LOG = Logger.getInstance(PrettierUtil.class);
 
   private static final class Holder {
@@ -107,7 +104,7 @@ public final class PrettierUtil {
   }
 
   public static boolean isConfigFileOrPackageJson(@Nullable VirtualFile virtualFile) {
-    return PackageJsonUtil.isPackageJsonFile(virtualFile) || isConfigFile(virtualFile);
+    return PackageJsonCommonUtil.isPackageJsonFile(virtualFile) || isConfigFile(virtualFile);
   }
 
   @Contract("null -> false")
@@ -117,7 +114,8 @@ public final class PrettierUtil {
 
   @Contract("null -> false")
   public static boolean isNonJSConfigFile(@Nullable VirtualFile virtualFile) {
-    return isConfigFile(virtualFile) && !ArrayUtil.contains(StringUtil.toLowerCase(virtualFile.getExtension()), "js", "mjs", "cjs");
+    return isConfigFile(virtualFile) &&
+           !ArrayUtil.contains(StringUtil.toLowerCase(virtualFile.getExtension()), "js", "mjs", "cjs", "ts", "mts", "cts");
   }
 
   @Contract("null -> false")
@@ -127,54 +125,19 @@ public final class PrettierUtil {
 
   public static @NotNull Collection<VirtualFile> lookupPossibleConfigFiles(@NotNull List<VirtualFile> from, @NotNull Project project) {
     HashSet<VirtualFile> results = new HashSet<>();
-    VirtualFile baseDir = project.getBaseDir();
-    if (baseDir == null) {
+    Set<VirtualFile> baseDirs = BaseProjectDirectories.getBaseDirectories(project);
+    if (baseDirs.isEmpty()) {
       return results;
     }
     for (VirtualFile file : from) {
-      addPossibleConfigsForFile(file, results, baseDir);
+      addPossibleConfigsForFile(file, results, baseDirs);
     }
     return results;
   }
 
-  public static boolean isFormattingAllowedForFile(@NotNull Project project, @NotNull VirtualFile file) {
-    var configuration = PrettierConfiguration.getInstance(project);
-
-    if (!GlobPatternUtil.isFileMatchingGlobPattern(project, configuration.getFilesPattern(), file)) {
-      return false;
-    }
-
-    if (!configuration.getFormatFilesOutsideDependencyScope()) {
-      return findPrettierScopeUpTree(project, file) != null;
-    }
-
-    return true;
-  }
-
-  public static @Nullable VirtualFile findPrettierScopeUpTree(@NotNull Project project, @NotNull VirtualFile file) {
-    Ref<VirtualFile> result = Ref.create();
-
-    JSProjectUtil.processDirectoriesUpToContentRoot(project, file, directory -> {
-      var packageJson = findChildPackageJsonFile(directory);
-      if (packageJson != null) {
-        var data = PackageJsonData.getOrCreate(packageJson);
-        if (data.isDependencyOfAnyType(PACKAGE_NAME)) {
-          result.set(directory);
-        }
-      }
-      if (result.isNull() && directory.isValid()) {
-        var configFile = findChildConfigFile(directory);
-        if (configFile != null) {
-          result.set(directory);
-        }
-      }
-      return result.isNull();
-    });
-
-    return result.get();
-  }
-
-  private static void addPossibleConfigsForFile(@NotNull VirtualFile from, @NotNull Set<VirtualFile> result, @NotNull VirtualFile baseDir) {
+  private static void addPossibleConfigsForFile(@NotNull VirtualFile from,
+                                                @NotNull Set<VirtualFile> result,
+                                                @NotNull Set<VirtualFile> baseDirs) {
     VirtualFile current = from.getParent();
     while (current != null && current.isValid() && current.isDirectory()) {
       for (String name : CONFIG_FILE_NAMES_WITH_PACKAGE_JSON) {
@@ -183,7 +146,7 @@ public final class PrettierUtil {
           result.add(file);
         }
       }
-      if (current.equals(baseDir)) {
+      if (baseDirs.contains(current)) {
         return;
       }
       current = current.getParent();
@@ -192,7 +155,7 @@ public final class PrettierUtil {
 
   public static @Nullable VirtualFile findSingleConfigInContentRoots(@NotNull Project project) {
     return JSLinterConfigFileUtil.findDistinctConfigInContentRoots(project, CONFIG_FILE_NAMES_WITH_PACKAGE_JSON, file -> {
-      if (PackageJsonUtil.isPackageJsonFile(file)) {
+      if (PackageJsonCommonUtil.isPackageJsonFile(file)) {
         PackageJsonData data = PackageJsonData.getOrCreate(file);
         return data.getTopLevelProperties().contains(CONFIG_SECTION_NAME);
       }
@@ -205,7 +168,7 @@ public final class PrettierUtil {
       return null;
     }
     List<VirtualFile> configs = ContainerUtil.mapNotNull(CONFIG_FILE_NAMES, name -> dir.findChild(name));
-    return configs.size() == 1 ? configs.get(0) : null;
+    return configs.size() == 1 ? configs.getFirst() : null;
   }
 
   public static @Nullable VirtualFile findFileConfig(@NotNull Project project, @NotNull VirtualFile from) {
@@ -227,7 +190,7 @@ public final class PrettierUtil {
       for (String name : CONFIG_FILE_NAMES_WITH_PACKAGE_JSON) {
         VirtualFile file = dir.findChild(name);
         if (file != null && file.isValid() && !file.isDirectory()) {
-          if (PackageJsonUtil.isPackageJsonFile(file)) {
+          if (PackageJsonCommonUtil.isPackageJsonFile(file)) {
             PackageJsonData data = PackageJsonData.getOrCreate(file);
             if (data.getTopLevelProperties().contains(CONFIG_SECTION_NAME)) {
               return file;
@@ -261,7 +224,7 @@ public final class PrettierUtil {
 
   private static @Nullable PrettierConfig parseConfigInternal(@NotNull PsiFile file) {
     try {
-      if (PackageJsonUtil.isPackageJsonFile(file)) {
+      if (PackageJsonCommonUtil.isPackageJsonFile(file)) {
         PackageJsonData packageJsonData = PackageJsonData.getOrCreate(file.getVirtualFile());
         if (!packageJsonData.isDependencyOfAnyType(PACKAGE_NAME)) {
           return null;
@@ -322,65 +285,6 @@ public final class PrettierUtil {
     return JSProjectUtil.findFileUpToContentRoot(project, fileDir, IGNORE_FILE_NAME);
   }
 
-  public interface ErrorHandler {
-    ErrorHandler DEFAULT = new DefaultErrorHandler();
-
-    void showError(@NotNull Project project,
-                   @Nullable Editor editor,
-                   @NotNull @Nls String text,
-                   @Nullable Runnable onLinkClick);
-
-    default void showErrorWithDetails(@NotNull Project project,
-                                      @Nullable Editor editor,
-                                      @NotNull @Nls String text,
-                                      @NotNull String details) {
-      showError(project, editor, text, () -> showErrorDetails(project, details));
-    }
-  }
-
-  public static final ErrorHandler NOOP_ERROR_HANDLER = new ErrorHandler() {
-    @Override
-    public void showError(@NotNull Project project, @Nullable Editor editor, @NotNull String text, @Nullable Runnable onLinkClick) {
-      // No need to show any notification in case of 'Prettier on save' failure.
-      // Most likely the file is simply not syntactically valid at the moment.
-    }
-  };
-
-  private static class DefaultErrorHandler implements ErrorHandler {
-    @Override
-    public void showError(@NotNull Project project, @Nullable Editor editor, @NotNull @Nls String text, @Nullable Runnable onLinkClick) {
-      if (editor != null) {
-        HyperlinkListener listener = onLinkClick == null ? null : new HyperlinkAdapter() {
-          @Override
-          protected void hyperlinkActivated(@NotNull HyperlinkEvent e) {
-            onLinkClick.run();
-          }
-        };
-        showHintLater(editor, PrettierBundle.message("prettier.formatter.hint.0", text), true, listener);
-      }
-      else {
-        Notification notification =
-          JSLinterGuesser.NOTIFICATION_GROUP.createNotification(PrettierBundle.message("prettier.formatter.notification.title"), text,
-                                                                NotificationType.ERROR);
-        if (onLinkClick != null) {
-          notification.setListener(new NotificationListener.Adapter() {
-            @Override
-            protected void hyperlinkActivated(@NotNull Notification notification1, @NotNull HyperlinkEvent e) {
-              onLinkClick.run();
-            }
-          });
-        }
-        notification.notify(project);
-      }
-    }
-  }
-
-  private static void showErrorDetails(@NotNull Project project, @NotNull String text) {
-    ProcessOutput output = new ProcessOutput();
-    output.appendStderr(text);
-    JsqtProcessOutputViewer
-      .show(project, PrettierBundle.message("prettier.formatter.notification.title"), ICON, null, null, output);
-  }
 
   public static void showHintLater(@NotNull Editor editor,
                                    @NotNull @Nls String text,
@@ -396,50 +300,27 @@ public final class PrettierUtil {
     }, ModalityState.nonModal(), o -> editor.isDisposed() || !editor.getComponent().isShowing());
   }
 
-  public static boolean checkNodeAndPackage(@NotNull PsiFile psiFile, @Nullable Editor editor, @NotNull ErrorHandler errorHandler) {
-    Project project = psiFile.getProject();
-    NodeJsInterpreterRef interpreterRef = NodeJsInterpreterRef.createProjectRef();
-    NodePackage nodePackage = PrettierConfiguration.getInstance(project).getPackage(psiFile);
-
-    NodeJsInterpreter nodeJsInterpreter;
+  public static void addExperimentalStripTypesIfNeeded(@NotNull NodeTargetRun targetRun, @NotNull String serviceName) {
+    var interpreter = targetRun.getInterpreter();
+    SemVer nodeVersion;
     try {
-      nodeJsInterpreter = NodeInterpreterUtil.getValidInterpreterOrThrow(interpreterRef.resolve(project));
+      nodeVersion = interpreter.provideCachedVersionOrFetch().blockingGet(1500, TimeUnit.MILLISECONDS);
     }
-    catch (ExecutionException e1) {
-      errorHandler.showError(project, editor, PrettierBundle.message("error.invalid.interpreter"),
-                             () -> NodeSettingsConfigurable.showSettingsDialog(project));
-      return false;
+    catch (Exception e) {
+      nodeVersion = null;
     }
-
-    if (nodePackage.isEmptyPath()) {
-      errorHandler.showError(project, editor, PrettierBundle.message("error.no.valid.package"),
-                             () -> editSettings(project));
-      return false;
+    if (nodeVersion != null &&
+        nodeVersion.compareTo(NODE_MIN_VERSION_FOR_STRIP_TYPES_FLAG) >= 0 &&
+        nodeVersion.compareTo(NODE_MAX_VERSION_FOR_STRIP_TYPES_FLAG) < 0) {
+      JSLanguageServiceUtil.addNodeProcessArguments(targetRun.getCommandLineBuilder(), serviceName, "--experimental-strip-types");
     }
-    if (!nodePackage.isValid(project, nodeJsInterpreter)) {
-      String message = PrettierBundle.message("error.package.is.not.installed",
-                                              NpmManager.getInstance(project).getNpmInstallPresentableText());
-      errorHandler.showError(project, editor, message, () -> installPackage(project));
-      return false;
-    }
-    SemVer nodePackageVersion = nodePackage.getVersion(project);
-    if (nodePackageVersion != null && nodePackageVersion.compareTo(MIN_VERSION) < 0) {
-      errorHandler.showError(project, editor,
-                             PrettierBundle.message("error.unsupported.version", MIN_VERSION.getRawVersion()), null);
-      return false;
-    }
-
-    return true;
   }
 
-  private static void editSettings(@NotNull Project project) {
-    ShowSettingsUtil.getInstance().editConfigurable(project, new PrettierConfigurable(project));
-  }
-
-  private static void installPackage(@NotNull Project project) {
-    final VirtualFile packageJson = PackageJsonUtil.findChildPackageJsonFile(project.getBaseDir());
-    if (packageJson != null) {
-      InstallNodeLocalDependenciesAction.runAndShowConsole(project, packageJson);
-    }
+  static Path getPrettierLanguageServicePath() throws IOException {
+    return JSPluginPathManager.getPluginResource(
+      PrettierUtil.class,
+      "prettierLanguageService",
+      AppMode.isRunningFromDevBuild() ? "prettierJS" : "prettierJS/gen"
+    );
   }
 }
