@@ -29,7 +29,7 @@ import com.intellij.openapi.util.ThrowableComputable;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.ReadonlyStatusHandler;
 import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.prettierjs.formatting.PrettierApplyFormattingStrategy;
+import com.intellij.prettierjs.formatting.PrettierFormattingApplier;
 import com.intellij.psi.PsiDirectory;
 import com.intellij.psi.PsiDocumentManager;
 import com.intellij.psi.PsiFile;
@@ -38,7 +38,6 @@ import com.intellij.psi.util.PsiUtilCore;
 import com.intellij.util.ArrayUtil;
 import com.intellij.util.NullableFunction;
 import com.intellij.util.SmartList;
-import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -47,20 +46,12 @@ import java.util.*;
 import java.util.concurrent.CompletableFuture;
 
 import static com.intellij.prettierjs.PrettierConfigUtilKt.ensureConfigsSaved;
-import static com.intellij.prettierjs.formatting.PrettierFormattingContextKt.createFormattingContext;
 
 public final class ReformatWithPrettierAction extends AnAction implements DumbAware {
   private static final @NotNull Logger LOG = Logger.getInstance(ReformatWithPrettierAction.class);
   private static final long EDT_TIMEOUT_MS = 2000;
 
-  private final PrettierUtil.ErrorHandler myErrorHandler;
-
-  public ReformatWithPrettierAction(@NotNull PrettierUtil.ErrorHandler errorHandler) {
-    myErrorHandler = errorHandler;
-  }
-
   public ReformatWithPrettierAction() {
-    this(PrettierUtil.ErrorHandler.DEFAULT);
   }
 
   @Override
@@ -97,34 +88,23 @@ public final class ReformatWithPrettierAction extends AnAction implements DumbAw
     }
     Editor editor = e.getData(CommonDataKeys.EDITOR);
     if (editor != null) {
-      processFileInEditor(project, editor, myErrorHandler, null);
+      processFileInEditor(project, editor, null);
     }
     else {
       VirtualFile[] virtualFiles = e.getData(CommonDataKeys.VIRTUAL_FILE_ARRAY);
       if (!ArrayUtil.isEmpty(virtualFiles)) {
-        processVirtualFiles(project, Arrays.asList(virtualFiles), myErrorHandler);
+        processVirtualFiles(project, Arrays.asList(virtualFiles));
       }
     }
   }
 
-  public static boolean isAvailable(@NotNull Project project, @NotNull Editor editor, @NotNull PrettierUtil.ErrorHandler errorHandler) {
-    PsiFile file = PsiDocumentManager.getInstance(project).getPsiFile(editor.getDocument());
-    if (file == null) {
-      return false;
-    }
-    return PrettierUtil.checkNodeAndPackage(file, editor, errorHandler);
-  }
-
   public static void processFileInEditor(@NotNull Project project,
                                          @NotNull Editor editor,
-                                         @NotNull PrettierUtil.ErrorHandler errorHandler,
                                          @Nullable TextRange targetRange) {
-    if (!isAvailable(project, editor, errorHandler)) return;
     PsiFile file = PsiDocumentManager.getInstance(project).getPsiFile(editor.getDocument());
     if (file == null) {
       return;
     }
-    if (!PrettierUtil.checkNodeAndPackage(file, editor, errorHandler)) return;
 
     VirtualFile vFile = file.getVirtualFile();
     if (ReadonlyStatusHandler.getInstance(project).ensureFilesWritable(Collections.singletonList(vFile))
@@ -139,7 +119,7 @@ public final class ReformatWithPrettierAction extends AnAction implements DumbAw
                               : null;
 
     ensureConfigsSaved(Collections.singletonList(vFile), project);
-    ThrowableComputable<PrettierLanguageService.FormatResult, RuntimeException> computable = () -> performRequestForFile(file, range);
+    ThrowableComputable<PrettierLanguageService.FormatResult, RuntimeException> computable = () -> performRequestForFile(file, range, null);
     PrettierLanguageService.FormatResult result = ProgressManager
       .getInstance()
       .runProcessWithProgressSynchronously(computable, PrettierBundle.message("progress.title"), true, project);
@@ -147,14 +127,8 @@ public final class ReformatWithPrettierAction extends AnAction implements DumbAw
     if (result == null) {
       return;
     }
-    if (!StringUtil.isEmpty(result.error)) {
-      errorHandler.showErrorWithDetails(project, editor,
-                                        PrettierBundle.message("error.while.reformatting.message"), result.error);
-    }
-    else if (result.unsupported) {
-      errorHandler.showError(project, editor, PrettierBundle.message("not.supported.file", file.getName()), null);
-    }
-    else if (result.ignored) {
+
+    if (result.ignored) {
       PrettierUtil.showHintLater(editor, PrettierBundle.message("file.was.ignored.hint", file.getName()), false, null);
     }
     else if (result.result != null) {
@@ -166,17 +140,12 @@ public final class ReformatWithPrettierAction extends AnAction implements DumbAw
        * this is enough to detect if separators were changed by the external process
        */
       Ref<Boolean> lineSeparatorUpdated = new Ref<>(Boolean.FALSE);
-      var formattingContext = createFormattingContext(document, newContent, result.cursorOffset);
-      var strategy = PrettierApplyFormattingStrategy.Companion.from(formattingContext);
+      var strategy = PrettierFormattingApplier.Companion.from(document, file, newContent);
 
       EditorScrollingPositionKeeper.perform(editor, true, () -> {
         runWriteCommandAction(project, () -> {
-          var isLineSeparatorChanged = strategy.apply(project, vFile, formattingContext);
+          var isLineSeparatorChanged = strategy.apply(project, file);
           lineSeparatorUpdated.set(isLineSeparatorChanged);
-
-          if (!editor.isDisposed() && formattingContext.getCursorOffset() >= 0) {
-            editor.getCaretModel().moveToOffset(formattingContext.getCursorOffset());
-          }
         });
       });
 
@@ -190,15 +159,11 @@ public final class ReformatWithPrettierAction extends AnAction implements DumbAw
 
     Project project = file.getProject();
 
-    if (!PrettierUtil.checkNodeAndPackage(file, null, PrettierUtil.NOOP_ERROR_HANDLER)) {
-      return range;
-    }
-
     VirtualFile vFile = file.getVirtualFile();
     ensureConfigsSaved(Collections.singletonList(vFile), project);
-    PrettierLanguageService.FormatResult result = performRequestForFile(file, range);
+    PrettierLanguageService.FormatResult result = performRequestForFile(file, range, null);
     if (result != null) {
-      int delta = applyFormatResult(project, vFile, result);
+      int delta = applyFormatResult(project, file, result);
       if (delta < 0 && range.getLength() < Math.abs(delta)) {
         return TextRange.from(range.getStartOffset(), 0);
       }
@@ -208,30 +173,28 @@ public final class ReformatWithPrettierAction extends AnAction implements DumbAw
   }
 
   public static void processVirtualFiles(@NotNull Project project,
-                                         @NotNull List<VirtualFile> virtualFiles,
-                                         @NotNull PrettierUtil.ErrorHandler errorHandler) {
+                                         @NotNull List<VirtualFile> virtualFiles) {
     ReadonlyStatusHandler.OperationStatus readonlyStatus = ReadonlyStatusHandler.getInstance(project).ensureFilesWritable(virtualFiles);
     if (readonlyStatus.hasReadonlyFiles()) {
       return;
     }
     ensureConfigsSaved(virtualFiles, project);
     PsiManager psiManager = PsiManager.getInstance(project);
-    if (virtualFiles.size() == 1 && virtualFiles.get(0).isDirectory()) {
-      PsiDirectory psiDirectory = psiManager.findDirectory(virtualFiles.get(0));
+    if (virtualFiles.size() == 1 && virtualFiles.getFirst().isDirectory()) {
+      PsiDirectory psiDirectory = psiManager.findDirectory(virtualFiles.getFirst());
       if (psiDirectory == null) {
         return;
       }
-      processFileIterator(project, new FileTreeIterator(psiDirectory), false, errorHandler);
+      processFileIterator(project, new FileTreeIterator(psiDirectory), false);
     }
     else {
-      processFileIterator(project, new FileTreeIterator(PsiUtilCore.toPsiFiles(psiManager, virtualFiles)), true, errorHandler);
+      processFileIterator(project, new FileTreeIterator(PsiUtilCore.toPsiFiles(psiManager, virtualFiles)), true);
     }
   }
 
   private static void processFileIterator(@NotNull Project project,
                                           final @NotNull FileTreeIterator fileIterator,
-                                          boolean reportSkippedFiles,
-                                          @NotNull PrettierUtil.ErrorHandler errorHandler) {
+                                          boolean reportSkippedFiles) {
     Map<PsiFile, PrettierLanguageService.FormatResult> results = executeUnderProgress(project, indicator -> {
       Map<PsiFile, PrettierLanguageService.FormatResult> reformattedResults = new HashMap<>();
 
@@ -244,11 +207,8 @@ public final class ReformatWithPrettierAction extends AnAction implements DumbAw
 
       for (PsiFile currentFile : files) {
         indicator.setText(PrettierBundle.message("processing.0.progress", currentFile.getName()));
-        if (!PrettierUtil.checkNodeAndPackage(currentFile, null, errorHandler)) {
-          return Collections.emptyMap();
-        }
 
-        PrettierLanguageService.FormatResult result = performRequestForFile(currentFile, null);
+        PrettierLanguageService.FormatResult result = performRequestForFile(currentFile, null, null);
         // timed out. show notification?
         if (result == null) {
           continue;
@@ -275,51 +235,49 @@ public final class ReformatWithPrettierAction extends AnAction implements DumbAw
         if (virtualFile == null) {
           continue;
         }
-        applyFormatResult(project, virtualFile, entry.getValue());
+        applyFormatResult(project, entry.getKey(), entry.getValue());
       }
     });
-    List<String> errors = ContainerUtil.mapNotNull(results.entrySet(), t -> t.getValue().error);
-    if (!errors.isEmpty()) {
-      errorHandler.showErrorWithDetails(project, null,
-                                        PrettierBundle.message("failed.to.reformat.0.files", errors.size()),
-                                        StringUtil.join(errors, "\n"));
-    }
+  }
+
+  static @Nullable PrettierLanguageService.FormatResult processFileAsFormattingTask(@NotNull PsiFile psiFile, @NotNull String text, @NotNull TextRange range) {
+    ProgressManager.checkCanceled();
+
+    VirtualFile vFile = psiFile.getVirtualFile();
+    if (vFile == null) return null;
+
+    Project project = psiFile.getProject();
+
+    ApplicationManager.getApplication().invokeAndWait(() -> {
+      ensureConfigsSaved(Collections.singletonList(vFile), project);
+    });
+
+    return performRequestForFile(psiFile, range, text);
   }
 
   /**
    * @param result (new text length) - (old text length)
    */
   static int applyFormatResult(@NotNull Project project,
-                               @NotNull VirtualFile virtualFile,
+                               @NotNull PsiFile file,
                                @NotNull PrettierLanguageService.FormatResult result) {
-    Document document = FileDocumentManager.getInstance().getDocument(virtualFile);
+    Document document = FileDocumentManager.getInstance().getDocument(file.getVirtualFile());
     if (document != null && StringUtil.isEmpty(result.error) && !result.ignored && !result.unsupported && (result.result != null)) {
-      var formattingContext = createFormattingContext(document, result.result, result.cursorOffset);
-      var strategy = PrettierApplyFormattingStrategy.Companion.from(formattingContext);
-      strategy.apply(project, virtualFile, formattingContext);
-
-      var editor = FileEditorManager.getInstance(project).getSelectedTextEditor();
-      if (editor != null &&
-          !editor.isDisposed() &&
-          editor.getVirtualFile().equals(virtualFile) &&
-          formattingContext.getCursorOffset() >= 0) {
-        editor.getCaretModel().moveToOffset(formattingContext.getCursorOffset());
-      }
-
-      return formattingContext.getContentLengthDelta();
+      var strategy = PrettierFormattingApplier.Companion.from(document, file, result.result);
+      var diff = result.result.length() - document.getTextLength();
+      strategy.apply(project, file);
+      return diff;
     }
     return 0;
   }
 
-  static @Nullable PrettierLanguageService.FormatResult performRequestForFile(@NotNull PsiFile currentFile, @Nullable TextRange range) {
-    boolean edt = ApplicationManager.getApplication().isDispatchThread();
-    if (!edt && ApplicationManager.getApplication().isReadAccessAllowed()) {
-      LOG.error("JSLanguageServiceUtil.awaitFuture() under read action may cause deadlock");
-    }
-
+  static @NotNull CompletableFuture<PrettierLanguageService.FormatResult> performRequestForFileAsync(
+    @NotNull PsiFile currentFile,
+    @Nullable TextRange range,
+    @Nullable String forcedInitialText
+  ) {
     Project project = currentFile.getProject();
     Ref<String> text = Ref.create();
-    Ref<Integer> cursorOffset = Ref.create(-1);
     Ref<String> filePath = Ref.create();
     Ref<String> ignoreFilePath = Ref.create();
     Ref<TextRange> rangeForRequest = Ref.create(range);
@@ -330,11 +288,16 @@ public final class ReformatWithPrettierAction extends AnAction implements DumbAw
       VirtualFile currentVFile = currentFile.getVirtualFile();
       filePath.set(LocalFilePath.asLocalFilePath(currentVFile.toNioPath()));
 
-      // PsiFile might be not committed at this point, take text from document
-      Document document = PsiDocumentManager.getInstance(project).getDocument(currentFile);
-      if (document == null) return;
-
-      CharSequence content = document.getImmutableCharSequence();
+      CharSequence content;
+      if (forcedInitialText != null) {
+        content = forcedInitialText;
+      }
+      else {
+        // PsiFile might be not committed at this point, take text from document
+        Document document = PsiDocumentManager.getInstance(project).getDocument(currentFile);
+        if (document == null) return;
+        content = document.getImmutableCharSequence();
+      }
 
       if (range != null && range.getStartOffset() == 0 && range.getLength() == content.length()) {
         // Prettier may remove trailing line break in Vue (WEB-56144, https://github.com/prettier/prettier/issues/13399).
@@ -345,14 +308,10 @@ public final class ReformatWithPrettierAction extends AnAction implements DumbAw
       int[] offsetsToKeep = null;
 
       var editor = FileEditorManager.getInstance(project).getSelectedTextEditor();
-      if (editor != null && !editor.isDisposed() && editor.getVirtualFile().equals(currentVFile)) {
+      if (editor != null && !editor.isDisposed() && Objects.equals(editor.getVirtualFile(), currentVFile)) {
         offsetsToKeep = new int[] { editor.getCaretModel().getOffset() };
       }
       var convertedText = JSLanguageServiceUtil.convertLineSeparatorsToFileOriginal(project, content, currentVFile, offsetsToKeep);
-
-      if (offsetsToKeep != null) {
-        cursorOffset.set(offsetsToKeep[0]);
-      }
 
       text.set(convertedText.toString());
       VirtualFile ignoreVFile = PrettierUtil.findIgnoreFile(project, currentVFile);
@@ -362,14 +321,26 @@ public final class ReformatWithPrettierAction extends AnAction implements DumbAw
     });
 
     if (text.isNull()) {
-      return PrettierLanguageService.FormatResult.UNSUPPORTED;
+      return CompletableFuture.completedFuture(PrettierLanguageService.FormatResult.UNSUPPORTED);
     }
 
     NodePackage nodePackage = PrettierConfiguration.getInstance(project).getPackage(currentFile);
     PrettierLanguageService service = PrettierLanguageService.getInstance(project, currentFile.getVirtualFile(), nodePackage);
 
-    CompletableFuture<PrettierLanguageService.FormatResult> formatFuture =
-      service.format(filePath.get(), ignoreFilePath.get(), text.get(), nodePackage, rangeForRequest.get(), cursorOffset.get());
+    return service.format(filePath.get(), ignoreFilePath.get(), text.get(), nodePackage, rangeForRequest.get());
+  }
+
+  static @Nullable PrettierLanguageService.FormatResult performRequestForFile(
+    @NotNull PsiFile currentFile,
+    @Nullable TextRange range,
+    @Nullable String forcedInitialText
+  ) {
+    boolean edt = ApplicationManager.getApplication().isDispatchThread();
+    if (!edt && ApplicationManager.getApplication().isReadAccessAllowed()) {
+      LOG.error("JSLanguageServiceUtil.awaitFuture() under read action may cause deadlock");
+    }
+
+    CompletableFuture<PrettierLanguageService.FormatResult> formatFuture = performRequestForFileAsync(currentFile, range, forcedInitialText);
     long timeout = edt ? EDT_TIMEOUT_MS : JSLanguageServiceUtil.getTimeout();
     return JSLanguageServiceUtil.awaitFuture(formatFuture, timeout, true, null, edt);
   }
